feat:finish all except Linear-Algebra

--- a/Rust-Note/Fearless-Concurrency/使用多线程.md
+++ b/Rust-Note/Fearless-Concurrency/使用多线程.md
@@ -184,7 +184,7 @@ for handle in handles {
 
 下图是该代码在`48`核机器上的运行结果：
 
-![image.png](%E4%BD%BF%E7%94%A8%E5%A4%9A%E7%BA%BF%E7%A8%8B%201d5b9c07c3128055807ec7ed8db4ffaa/image.png)
+![image.png](../../.assert/Rust-Note/Fearless-Concurrency/使用多线程/image.png)
 
 从图上可以明显的看出：吞吐并不是线性增长，尤其从 `16` 核开始，甚至开始肉眼可见的下降，这是为什么呢？
 
