--- a/Rust-Note/Fearless-Concurrency/并发和并行.md
+++ b/Rust-Note/Fearless-Concurrency/并发和并行.md
@@ -1,6 +1,6 @@
 # 并发和并行
 
-![image.png](%E5%B9%B6%E5%8F%91%E5%92%8C%E5%B9%B6%E8%A1%8C%201d5b9c07c31280c0ade5cb6bbf1574a8/image.png)
+![image.png](../../.assert/Rust-Note/Fearless-Concurrency/并发和并行/image.png)
 
 上图很直观的体现了：
 
